[gd_scene load_steps=5 format=3 uid="uid://durulyhj2ovs7"]

[ext_resource type="Script" uid="uid://diuhrux61quqw" path="res://player/player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://1xqp6xrderhq" path="res://player/parry_area.tscn" id="2_onrkg"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4flbx"]
height = 0.24

[sub_resource type="CylinderMesh" id="CylinderMesh_4flbx"]

[node name="Player" type="RigidBody3D"]
collision_layer = 2
collision_mask = 13
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_4flbx")

[node name="Disc" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00271222, 0)
shape = SubResource("CylinderShape3D_4flbx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Disc"]
transform = Transform3D(1, 0, 0, 0, 0.12, 0, 0, 0, 1, 0, -0.00271222, 0)
mesh = SubResource("CylinderMesh_4flbx")
skeleton = NodePath("../..")

[node name="ParryArea3D" parent="." instance=ExtResource("2_onrkg")]
collision_mask = 12

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="ParryArea3D" to="." method="_on_parry_area_3d_body_entered"]
[connection signal="body_exited" from="ParryArea3D" to="." method="_on_parry_area_3d_body_exited"]
